basic/lasid-jupyter-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lasid-jupyter
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: lasid-jupyter
  template:
    metadata:
      labels:
        app: lasid-jupyter
    spec:
      containers:
      - image: nginxdemos/hello:latest
        name: lasid-jupyter
        ports:
        - containerPort: 80
