basic/lasid-jupyter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lasid-jupyter
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: lasid-jupyter
